update clear function for Mac